[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leetcode-solutions"
version = "0.1.0"
description = "Curated, documented solutions for selected LeetCode problems."
readme = "README.md"
authors = [{name = "Daniel Madden"}]
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/danielmadden/LeetCode"

[tool.setuptools]
packages = ["leetcode_solutions"]
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.package-data]
"leetcode_solutions" = ["problems/**/*.py", "problems/**/*.md", "problems/**/*.pdf"]
